--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,9 +1,10 @@
 version: 0.2
 
 env:
-  AWS_ECR: 781788730003.dkr.ecr.ap-northeast-2.amazonaws.com/
-  IMAGE_REPO_NAME: ecspipe-image
-  CONTAINER_NAME: escpipe-container
+  variables:
+    AWS_ECR: 781788730003.dkr.ecr.ap-northeast-2.amazonaws.com/
+    IMAGE_REPO_NAME: ecspipe-image
+    CONTAINER_NAME: escpipe-container
 
 
 phases:
