--- a/buildspec.yml
+++ b/buildspec.yml
@@ -10,11 +10,11 @@ env:
 phases:
   pre_build:
     commands:
-      - aws ecr get-login-password --region ap-northeast-2 | docker login --username AWS --password-stdin $AWS_ECR # ECR 로그인
+      - aws ecr get-login-password --region ap-northeast-2 | docker login --username AWS --password-stdin $AWS_ECR 
 
   build:
     commands:
-      - IMAGE_TAG=$CODEBUILD_BUILD_NUMBER # 이미지 빌드, 
+      - IMAGE_TAG=$CODEBUILD_BUILD_NUMBER  
       - docker build -t $IMAGE_REPO_NAME:$IMAGE_TAG .
       - docker tag $IMAGE_REPO_NAME:$IMAGE_TAG $AWS_ECR/$IMAGE_REPO_NAME:$IMAGE_TAG
       - docker tag $IMAGE_REPO_NAME:$IMAGE_TAG $AWS_ECR/$IMAGE_REPO_NAME:latest
@@ -25,7 +25,6 @@ phases:
       - docker push $AWS_ECR/$IMAGE_REPO_NAME:$IMAGE_TAG
       - - printf '[{"name":"%s","imageUri":"%s"}]' $CONTAINER_NAME $AWS_ECR/$IMAGE_REPO_NAME:$IMAGE_TAG > imagedefinitions.json
 
-# 빌드가 끝나고 나서 빌드이후 어떤 결과물 파일들이 나올지 
 artifacts:
   files:
-    - imagedefinitions.json # push된 이미지로 부터 컨테이너를 배포하기 위함 
+    - imagedefinitions.json  
