--- a/buildspec.yml
+++ b/buildspec.yml
@@ -14,17 +14,18 @@ phases:
 
   build:
     commands:
-      - IMAGE_TAG=$CODEBUILD_BUILD_NUMBER  
+      - IMAGE_TAG=$CODEBUILD_BUILD_NUMBER
       - docker build -t $IMAGE_REPO_NAME:$IMAGE_TAG .
+
       - docker tag $IMAGE_REPO_NAME:$IMAGE_TAG $AWS_ECR/$IMAGE_REPO_NAME:$IMAGE_TAG
       - docker tag $IMAGE_REPO_NAME:$IMAGE_TAG $AWS_ECR/$IMAGE_REPO_NAME:latest
 
   post_build:
     commands:
-      - docker push $AWS_ECR/$IMAGE_REPO_NAME:latest
+      - docker push $AWS_ECR/$IMAGE_REPO_NAME:latest #이미지푸시
       - docker push $AWS_ECR/$IMAGE_REPO_NAME:$IMAGE_TAG
       - printf '[{"name":"%s","imageUri":"%s"}]' $CONTAINER_NAME $AWS_ECR/$IMAGE_REPO_NAME:$IMAGE_TAG > imagedefinitions.json
 
-artifacts:
+artifacts: 
   files:
     - imagedefinitions.json  
